[package]
name = "simple_proxy"
version = "0.1.0"
edition = "2021"
authors = ["fly fishes <flyfishes@github.com>"]
description = "一个简单的HTTP/HTTPS代理服务器"
license = "MIT"
readme = "README.md"
repository = "https://github.com/flyfishes/simple-proxy"
keywords = ["proxy", "http", "https", "server"]
categories = ["network-programming", "web-programming"]

[dependencies]
# 核心日志门面：代码中直接 use 了 log，必须作为基础依赖，否则不开启 feature 时会报语法错误
log = "0.4"

# 1. 日志实现支持（可选）
env_logger = { version = "0.10", optional = true }

# 2. 配置文件支持 (TOML) (可选)
serde = { version = "1.0", features = ["derive"], optional = true }
toml = { version = "0.8", optional = true }

# 3. TLS 支持 (可选)
native-tls = { version = "0.2", optional = true }

# 4. 命令行参数解析 (可选)
clap = { version = "4.0", features = ["derive"], optional = true }

[dev-dependencies]

[profile.dev]
opt-level = 0
debug = true
lto = false
rpath = false

[profile.release]
opt-level = 3
debug = false
lto = true
panic = 'abort'
codegen-units = 1
strip = true

[features]
# 默认启用日志和 TLS
default = ["logging", "tls"]

# 启用日志输出实现
logging = ["dep:env_logger"]

# 启用配置文件支持
config = ["dep:serde", "dep:toml"]

# 启用命令行参数解析
cli = ["dep:clap"]

# 启用 TLS 支持
tls = ["dep:native-tls"]

# 完整功能
full = ["logging", "config", "cli", "tls"]